--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
       <div class="hero">
         <h2>Carefree, Reliable Adaptive and Personalised Heating Solutions for Your Home</h2>
         <p>
-          Welcome to Flo's Heating Pumps—your last resort in energy-efficient heat pump systems. If you have no other options, I am happy to help.
-          Whether you're upgrading your home or starting from scratch, we help you stay warm while hopefully saving on energy bills.
+          Welcome to Flo's Heating Pumps, your last resort in energy efficient heat pump systems. If you have no other options, I am happy to help.
+          Whether you're upgrading your home or starting from scratch, I will help you stay warm while hopefully saving you some money on energy bills.
         </p>
       </div>
 
       <div class="features">
         <div class="feature">
           <h3>Energy Efficient Systems</h3>
-          <p>We can’t promise miracles, but with a bit of luck and minimal smoke, your home might even get warmer while the planet gets slightly less annoyed with you.</p>
+          <p>I can’t promise miracles, but with a bit of luck and minimal smoke, your home might even get warmer while the planet gets slightly less annoyed with you.</p>
         </div>
         <div class="feature">
           <h3>Professional Installation</h3>
-          <p>Will it work? Probably. Well? Guess you need to find out!.</p>
+          <p>Will it work? Probably. Will it work well? Guess you need to find out!.</p>
         </div>
         <div class="feature">
           <h3>Reliable Maintenance</h3>
-          <p>If anything gos wrong just speak to the consumer bodies.</p>
+          <p>If anything goes wrong just speak to the consumer bodies.</p>
         </div>
       </div>
     </section>
@@ -71,7 +71,7 @@
         My mission is simple: to keep your home warm despite my best efforts. I proudly deliver heating solutions that usually work, installed by someone who has watched at least half of a YouTube tutorial. Whilst I may not be the most 	gifted installer, I make up for it with enthusiasm, stubbornness, and an impressive ability to say ‘that’s probably fine.’
 	</p>
 	<p>
-	We strive to provide service that is almost professional, mostly functional, and occasionally impressive. At the end of 	the day, our goal is to leave you with a heating pump that works better than Flo expected—and honestly, that’s a win for 	everyone.”
+	I strive to provide a service that is almost professional, mostly functional, and occasionally impressive. At the end of 	the day, my goal is to leave you with a heat pump that works better than expected and honestly, that’s a win for 	everyone.”
 
       </p>
     </section>
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
